# kupka

./: .gitignore  pyproject.toml  tox.ini
src/kupka/: __init__.py  cg3.py
src/kupka/_impl/: cache.py  kupka.py  kupklass.py  nodes.py  settings.py  visualisation.py  wrappers.py
src/kupka/_impl/execution/: core.py  multiprocessing.py  sequential.py
tests/functional/: test_kupka.py
tests/unit/: test_cg3.py
tests/unit/kupka/_impl/: test_graph_tools.py
